# Grok_CLI

./: Grok_CLI_ASCII_banner.txt  Grok_CLI_Blueprint_v1.md  INSTALL.md  LICENSE  MANIFEST.md  README.md  README_CURRENT.md  grok  grok_cli.py  pyproject.toml
grok_cli/: __init__.py  agent.py  cache.py  config.py  main.py  models.py  plugins.py  repl.py  sandbox.py  session.py  slash_commands.py  tools.py  validators.py
grok_cli/commands/: ask.py  create.py  edit.py  heavy.py  shell.py  utility.py
grok_cli/providers/: base.py  grok.py
grok_cli/ui/: __init__.py  banner.py  prompt.py  tasks.py
tests/: __init__.py  test_cache.py  test_config.py  test_models.py  test_sandbox.py  test_toon.py
