[tool.poetry]
name = "grok-cli"
version = "1.0.0+current"
description = "Lean, safe command-line interface for Grok models"
authors = ["Sirius T. Bontea"]
readme = "README.md"
packages = [{include = "grok_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12"}
rich = "^13.8"
prompt-toolkit = "^3.0"
httpx = "^0.27"
pydantic = "^2.9"
tomlkit = "^0.13"
openai = "^1.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
ruff = "^0.6"
mypy = "^1.11"

[tool.poetry.scripts]
grok = "grok_cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
